--- a/AlgorithmGossip/JosephusProblem.htm
+++ b/AlgorithmGossip/JosephusProblem.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¬ù·æ¤Ò°İÃD¡]Josephus Problem¡^</title>
+  <title>ç´„ç‘Ÿå¤«å•é¡Œï¼ˆJosephus Problemï¼‰</title>
 </head>
 
 
@@ -51,33 +51,33 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¬ù·æ¤Ò°İÃD¡]Josephus Problem¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ç´„ç‘Ÿå¤«å•é¡Œï¼ˆJosephus Problemï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¾Ú»¡µÛ¦WµS¤Ó¾ú¥v¾Ç®a Josephus¦³¹L¥H¤Uªº¬G¨Æ¡G¦bÃ¹°¨¤H¦û»â³ì¶ğ©¬¯S«á¡A39
-­ÓµS¤Ó¤H»PJosephus¤Î¥LªºªB¤Í¸ú¨ì¤@­Ó¬}¤¤¡A39­ÓµS¤Ó¤H¨M©w¹çÄ@¦º¤]¤£­n³Q¼Ä¤H¨ì¡A©ó¬O¨M©w¤F¤@­Ó¦Û±ş¤è¦¡¡A41­Ó¤H±Æ¦¨¤@­Ó¶ê°é¡A¥Ñ²Ä1­Ó¤H
-¶}©l³ø¼Æ¡A¨C³ø¼Æ¨ì²Ä3¤H¸Ó¤H´N¥²¶·¦Û±ş¡AµM«á¦A¥Ñ¤U¤@­Ó­«·s³ø¼Æ¡Aª½¨ì©Ò¦³¤H³£¦Û±ş¨­¤`¬°¤î¡C<br>
+<h2>èªªæ˜</h2>
+æ“šèªªè‘—åçŒ¶å¤ªæ­·å²å­¸å®¶ Josephusæœ‰éä»¥ä¸‹çš„æ•…äº‹ï¼šåœ¨ç¾…é¦¬äººä½”é ˜å–¬å¡”å¸•ç‰¹å¾Œï¼Œ39
+å€‹çŒ¶å¤ªäººèˆ‡JosephusåŠä»–çš„æœ‹å‹èº²åˆ°ä¸€å€‹æ´ä¸­ï¼Œ39å€‹çŒ¶å¤ªäººæ±ºå®šå¯§é¡˜æ­»ä¹Ÿä¸è¦è¢«æ•µäººåˆ°ï¼Œæ–¼æ˜¯æ±ºå®šäº†ä¸€å€‹è‡ªæ®ºæ–¹å¼ï¼Œ41å€‹äººæ’æˆä¸€å€‹åœ“åœˆï¼Œç”±ç¬¬1å€‹äºº
+é–‹å§‹å ±æ•¸ï¼Œæ¯å ±æ•¸åˆ°ç¬¬3äººè©²äººå°±å¿…é ˆè‡ªæ®ºï¼Œç„¶å¾Œå†ç”±ä¸‹ä¸€å€‹é‡æ–°å ±æ•¸ï¼Œç›´åˆ°æ‰€æœ‰äººéƒ½è‡ªæ®ºèº«äº¡ç‚ºæ­¢ã€‚<br>
 <br>
-µM¦ÓJosephus ©M¥LªºªB¤Í¨Ã¤£·Q¿í±q¡AJosephus­n¥LªºªB¤Í¥ı°²¸Ë¿í±q¡A¥L±NªB¤Í»P¦Û¤v¦w±Æ¦b²Ä16­Ó»P²Ä31­Ó¦ì¸m¡A©ó¬O°k¹L¤F³o³õ¦º¤`¹CÀ¸¡C<br>
-<h2>¸Ñªk</h2>
-¬ù·æ¤Ò°İÃD¥i¥Î¥N¼Æ¤ÀªR¨Ó¨D¸Ñ¡A±N³o­Ó°İÃDÂX¤j¦n¤F¡A°²³]²{¦b±z»Pm­ÓªB¤Í¤£©¯°Ñ»P¤F³o­Ó¹CÀ¸¡A±z­n¦p¦ó«OÅ@±z»P±zªºªB¤Í¡H¥u­nµe¨â­Ó¶ê°é´N¥i¥HÅı¦Û¤v»PªB¤Í§K©ó¦º¤`¹CÀ¸¡A³o¨â­Ó¶ê°é¤º°é¬O±Æ¦C¶¶§Ç¡A¦Ó¥~°é¬O¦Û±ş¶¶§Ç¡A¦p¤U¹Ï©Ò¥Ü¡G <br>
+ç„¶è€ŒJosephus å’Œä»–çš„æœ‹å‹ä¸¦ä¸æƒ³éµå¾ï¼ŒJosephusè¦ä»–çš„æœ‹å‹å…ˆå‡è£éµå¾ï¼Œä»–å°‡æœ‹å‹èˆ‡è‡ªå·±å®‰æ’åœ¨ç¬¬16å€‹èˆ‡ç¬¬31å€‹ä½ç½®ï¼Œæ–¼æ˜¯é€ƒéäº†é€™å ´æ­»äº¡éŠæˆ²ã€‚<br>
+<h2>è§£æ³•</h2>
+ç´„ç‘Ÿå¤«å•é¡Œå¯ç”¨ä»£æ•¸åˆ†æä¾†æ±‚è§£ï¼Œå°‡é€™å€‹å•é¡Œæ“´å¤§å¥½äº†ï¼Œå‡è¨­ç¾åœ¨æ‚¨èˆ‡må€‹æœ‹å‹ä¸å¹¸åƒèˆ‡äº†é€™å€‹éŠæˆ²ï¼Œæ‚¨è¦å¦‚ä½•ä¿è­·æ‚¨èˆ‡æ‚¨çš„æœ‹å‹ï¼Ÿåªè¦ç•«å…©å€‹åœ“åœˆå°±å¯ä»¥è®“è‡ªå·±èˆ‡æœ‹å‹å…æ–¼æ­»äº¡éŠæˆ²ï¼Œé€™å…©å€‹åœ“åœˆå…§åœˆæ˜¯æ’åˆ—é †åºï¼Œè€Œå¤–åœˆæ˜¯è‡ªæ®ºé †åºï¼Œå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š <br>
 
-<div style="text-align: center;"><img style="width: 327px; height: 347px;" alt="¬ù·æ¤Ò°İÃD" title="¬ù·æ¤Ò°İÃD" src="images/josephusProblem-1.jpg"></div>
-¨Ï¥Îµ{¦¡¨Ó¨D¸Ñªº¸Ü¡A¥u­n±N°}¦C·í§@Àôª¬¨Ó³B²z´N¥i¥H¤F¡A¦b°}¦C¤¤¥Ñ­p¼Æ1¶}©l¡A¨C§ä¨ì¤T­ÓµL¸ê®Æ°Ï´N¶ñ¤J¤@­Ó­p¼Æ¡Aª½¦Ó­p¼Æ¹F41¬°¤î¡AµM«á±N°}¦C¥Ñ¯Á¤Ş1¶}©l¦C¥X¡A´N¥i¥H±oª¾¨C­Ó¦ì¸mªº¦Û±ş¶¶§Ç¡A³o´N¬O¬ù·æ¤Ò±Æ¦C¡A41­Ó¤H¦Ó³ø¼Æ3ªº¬ùµ^¤Ò±Æ¦C¦p¤U©Ò¥Ü¡G<br>
+<div style="text-align: center;"><img style="width: 327px; height: 347px;" alt="ç´„ç‘Ÿå¤«å•é¡Œ" title="ç´„ç‘Ÿå¤«å•é¡Œ" src="images/josephusProblem-1.jpg"></div>
+ä½¿ç”¨ç¨‹å¼ä¾†æ±‚è§£çš„è©±ï¼Œåªè¦å°‡é™£åˆ—ç•¶ä½œç’°ç‹€ä¾†è™•ç†å°±å¯ä»¥äº†ï¼Œåœ¨é™£åˆ—ä¸­ç”±è¨ˆæ•¸1é–‹å§‹ï¼Œæ¯æ‰¾åˆ°ä¸‰å€‹ç„¡è³‡æ–™å€å°±å¡«å…¥ä¸€å€‹è¨ˆæ•¸ï¼Œç›´è€Œè¨ˆæ•¸é”41ç‚ºæ­¢ï¼Œç„¶å¾Œå°‡é™£åˆ—ç”±ç´¢å¼•1é–‹å§‹åˆ—å‡ºï¼Œå°±å¯ä»¥å¾—çŸ¥æ¯å€‹ä½ç½®çš„è‡ªæ®ºé †åºï¼Œé€™å°±æ˜¯ç´„ç‘Ÿå¤«æ’åˆ—ï¼Œ41å€‹äººè€Œå ±æ•¸3çš„ç´„ç´å¤«æ’åˆ—å¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 <div style="margin-left: 40px;"><span style="font-weight: bold;">14 36 1 38 15 2 24 30 3 16 34 4 25 17 5 40 31 6 18 26 7 37 19 8 35 27 9 20 32 10 41 21 11 28 39 12 22 33 13 29 23</span><br>
 </div>
 <br>
-¥Ñ¤W¥iª¾¡A³Ì«á¤@­Ó¦Û±şªº¬O¦b²Ä31­Ó¦ì¸m¡A¦Ó­Ë¼Æ²Ä¤G­Ó¦Û±şªº­n±Æ¦b²Ä16­Ó¦ì¸m¡A¤§«eªº¤H³£¦º¥ú¤F¡A©Ò¥H¥L­Ì¤]´N¤£ª¾¹D¬ùµ^¤Ò»P¥LªºªB¤Í¨Ã¨S¦³¿í¦u¹CÀ¸³W«h¤F¡C <br>
-<h2> ¹ê§@</h2>
+ç”±ä¸Šå¯çŸ¥ï¼Œæœ€å¾Œä¸€å€‹è‡ªæ®ºçš„æ˜¯åœ¨ç¬¬31å€‹ä½ç½®ï¼Œè€Œå€’æ•¸ç¬¬äºŒå€‹è‡ªæ®ºçš„è¦æ’åœ¨ç¬¬16å€‹ä½ç½®ï¼Œä¹‹å‰çš„äººéƒ½æ­»å…‰äº†ï¼Œæ‰€ä»¥ä»–å€‘ä¹Ÿå°±ä¸çŸ¥é“ç´„ç´å¤«èˆ‡ä»–çš„æœ‹å‹ä¸¦æ²’æœ‰éµå®ˆéŠæˆ²è¦å‰‡äº†ã€‚ <br>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 41 <br>#define M 3 <br><br>int main(void) { <br>    int man[N] = {0}; <br>    int count = 1; <br>    int i = 0, pos = -1; <br>    int alive = 0; <br><br>    while(count &lt;= N) { <br>        do { <br>            pos = (pos+1) % N;  // Àôª¬³B²z <br>            if(man[pos] == 0) <br>                i++; <br><br>            if(i == M) {  // ³ø¼Æ¬°3¤F <br>                i = 0; <br>                break; <br>            } <br>        } while(1); <br><br>        man[pos] = count; <br>        count++; <br>    } <br><br>    printf("\n¬ùµ^¤Ò±Æ¦C¡G"); <br>    for(i = 0; i &lt; N; i++) <br>        printf("%d ", man[i]); <br><br>    printf("\n\n±z·Q­n±Ï¦h¤Ö¤H¡H"); <br>    scanf("%d", &amp;alive); <br><br>    printf("\nLªí¥Ü³o%d¤H­n©ñªº¦ì¸m¡G\n", alive); <br>    for(i = 0; i &lt; N; i++) { <br>        if(man[i] &gt; alive) <br>            printf("D"); <br>        else <br>            printf("L"); <br><br>        if((i+1) % 5 == 0) <br>            printf("  "); <br>    } <br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 41 <br>#define M 3 <br><br>int main(void) { <br>    int man[N] = {0}; <br>    int count = 1; <br>    int i = 0, pos = -1; <br>    int alive = 0; <br><br>    while(count &lt;= N) { <br>        do { <br>            pos = (pos+1) % N;  // ç’°ç‹€è™•ç† <br>            if(man[pos] == 0) <br>                i++; <br><br>            if(i == M) {  // å ±æ•¸ç‚º3äº† <br>                i = 0; <br>                break; <br>            } <br>        } while(1); <br><br>        man[pos] = count; <br>        count++; <br>    } <br><br>    printf("\nç´„ç´å¤«æ’åˆ—ï¼š"); <br>    for(i = 0; i &lt; N; i++) <br>        printf("%d ", man[i]); <br><br>    printf("\n\næ‚¨æƒ³è¦æ•‘å¤šå°‘äººï¼Ÿ"); <br>    scanf("%d", &amp;alive); <br><br>    printf("\nLè¡¨ç¤ºé€™%däººè¦æ”¾çš„ä½ç½®ï¼š\n", alive); <br>    for(i = 0; i &lt; N; i++) { <br>        if(man[i] &gt; alive) <br>            printf("D"); <br>        else <br>            printf("L"); <br><br>        if((i+1) % 5 == 0) <br>            printf("  "); <br>    } <br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 <br>
 
@@ -85,7 +85,7 @@ Gossip@caterpillar</a></h3>
   <li> Java </li>
 </ul>
 
-<pre>public class Josephus {<br>    public static int[] arrayOfJosephus(<br>                               int number, int per) {<br>        int[] man = new int[number]; <br><br>        for(int count = 1, i = 0, pos = -1; <br>                count &lt;= number; count++) { <br>            do { <br>                pos = (pos+1) % number;  // Àôª¬³B²z <br>                if(man[pos] == 0) <br>                    i++; <br><br>                if(i == per) {  // ³ø¼Æ¬°3¤F <br>                    i = 0; <br>                    break; <br>                } <br>            } while(true); <br><br>            man[pos] = count; <br>        } <br>        <br>        return man;<br>    }<br><br>    public static void main(String[] args) {<br>        int[] man = Josephus.arrayOfJosephus(41, 3);<br>        int alive = 3;<br>        <br>        System.out.println("¬ùµ^¤Ò±Æ¦C¡G"); <br>        for(int i = 0; i &lt; 41; i++) <br>            System.out.print(man[i] + " "); <br><br><br>        System.out.println("\nLªí¥Ü3­Ó¦s¬¡ªº¤H­n©ñªº¦ì¸m¡G"); <br>        for(int i = 0; i &lt; 41; i++) { <br>            if(man[i] &gt; alive) <br>                System.out.print("D"); <br>            else <br>                System.out.print("L"); <br><br>            if((i+1) % 5 == 0) <br>                System.out.print("  "); <br>        } <br><br>        System.out.println();<br>    }<br>}</pre>
+<pre>public class Josephus {<br>    public static int[] arrayOfJosephus(<br>                               int number, int per) {<br>        int[] man = new int[number]; <br><br>        for(int count = 1, i = 0, pos = -1; <br>                count &lt;= number; count++) { <br>            do { <br>                pos = (pos+1) % number;  // ç’°ç‹€è™•ç† <br>                if(man[pos] == 0) <br>                    i++; <br><br>                if(i == per) {  // å ±æ•¸ç‚º3äº† <br>                    i = 0; <br>                    break; <br>                } <br>            } while(true); <br><br>            man[pos] = count; <br>        } <br>        <br>        return man;<br>    }<br><br>    public static void main(String[] args) {<br>        int[] man = Josephus.arrayOfJosephus(41, 3);<br>        int alive = 3;<br>        <br>        System.out.println("ç´„ç´å¤«æ’åˆ—ï¼š"); <br>        for(int i = 0; i &lt; 41; i++) <br>            System.out.print(man[i] + " "); <br><br><br>        System.out.println("\nLè¡¨ç¤º3å€‹å­˜æ´»çš„äººè¦æ”¾çš„ä½ç½®ï¼š"); <br>        for(int i = 0; i &lt; 41; i++) { <br>            if(man[i] &gt; alive) <br>                System.out.print("D"); <br>            else <br>                System.out.print("L"); <br><br>            if((i+1) % 5 == 0) <br>                System.out.print("  "); <br>        } <br><br>        System.out.println();<br>    }<br>}</pre>
 <br>
 <br>
 
